--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         </div>
         <div class="chart-container">
             <canvas id="tasksChart" width="400" height="400"></canvas>
+            <div id="percentages"></div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
